--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^0.27.2",
+    "lodash.debounce": "^4.0.8",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "^4.2.5",
